# genepi

./: .gitignore  .releaserc  CMakeLists.txt  README.md  azure-pipelines.yml  package-lock.json  package.json
.github/workflows/: CI.yml  nodejs.yml
cmake/: genepiConfig.cmake.in  utils.cmake
examples/: CMakeLists.txt  index.js
examples/classes/: classes.cpp  classes.js
examples/functions/: functions.cpp  functions.js
examples/inherit/: inherit.cpp  inherit.js
examples/methods/: methods.cpp  methods.js
examples/objects/: objects.cpp  objects.js
examples/overloaded-functions/: overloaded-functions.cpp  overloaded-functions.js
examples/overloaded-methods/: overloaded-methods.cpp  overloaded-methods.js
include/genepi/: arg_from_napi_value.h  bind_class.h  bind_class_base.h  binding_std.h  binding_type.h  callable.h  caller.h  checker.h  class_definer.h  class_wrapper.h  common.h  creator.h  function_definer.h  function_definition.h  genepi.h  genepi_registry.h  method_definition.h  singleton.h  type_list.h  type_transformer.h  types.h
include/genepi/signature/: base_signature.h  constructor_signature.h  function_signature.h  method_signature.h  signature_param.h  templated_base_signature.h
src/genepi/: common.cpp  genepi_registry.cpp  singleton.cpp
test/: test.cpp  test.js
